internal/provider/kubernetes/testdata/custom-resource.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: gw
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: extensions.example.io/v1alpha1
kind: CustomExtensionServerPolicy
metadata:
  name: exampleUser
spec:
  targetRefs:
    - kind: Gateway
      name: gw
      group: gateway.networking.k8s.io
  username: user
  password: p@ssw0rd
